--- a/docs/fonctionnalite.wiki
+++ b/docs/fonctionnalite.wiki
@@ -1,21 +1,22 @@
-Légende : {{fait}} module activé / {{pas fait}} module pas activé / {{attendre}} consensus communautaire
+Légende : {{fait}} module activé / {{pas fait}} module pas activé / {{attendre}}
 
 === Traitement modèle {Ouvrage} ===
 
 Correction syntaxique des paramètres :
 * {{fait}} correction des alias [cosmétique]
 * {{fait}} conversion des paramètres enwiki ({{m|cite book}}) [cosmétique]
-* {{fait}} correction de paramètres inconnus (prédiction) : erreur de frappe
-* {{attendre}} {{pas fait}}  signalement paramètre inconnu : commentaire HTML, note=, liste, catégorie ?
+* {{fait}} correction de paramètres inconnus (prédiction) : erreur de frappe [https://fr.wikipedia.org/w/index.php?title=Saint_Fran%C3%A7ois_recevant_les_stigmates_(van_Eyck)&diff=prev&oldid=163864610]
+* {{fait}}  signalement paramètre inconnu : commentaire HTML. {{pas fait}} liste, catégorie
 * {{fait}} extraction paramètres obsolètes (plume,extrait,commentaire) vers {{m|plume}}, {{m|citation bloc}}, {{m|commentaire biblio}}, {{m|début citation}}... [cosmétique]
 
-Style : {{attendre}} conservation du style rédactionnel du modèle (ordre des paramètres, espacement)
+Style : {{attendre}} conservation du style rédactionnel du modèle : {{pas fait}} ordre des paramètres, {{fait}} style espacement, {{pas fait}} noms
 
 Complètement de données d'après des bases bibliographiques :
 * recherche par {{fait}}ISBN, {{pas fait}} lien Google, {{pas fait}}  titre de livre, etc
 * Bases interrogées : {{fait}}Google Books, {{fait}}OpenLibrary, {{attendre}} Worldcat, {{pas fait}}Wikidata
 * todo: décrire fiabilité données
 * {{fait}} comparaison titre/auteur pour fiabilité infos
+* Exemple : [https://fr.wikipedia.org/w/index.php?title=Saint_Jean-Baptiste_dans_le_d%C3%A9sert_(Le_Caravage)&diff=prev&oldid=163955808 ajout sous-titre]
 
 Améliorations typographiques :
 
@@ -25,15 +26,15 @@ Titre, sous-titre...
 * {{fait}}retire {{m|lang}} : déplacé vers 'langue' [cosmétique]
 * {{fait}} déplacement en 'sous-titre' [cosmétique?]
 
-lieu : {{fait}} pas de wikilien sur lieu (stats/pertinence) : [[Paris]] -> Paris
-
+Autres :
+* {{fait}} pas de wikilien sur 'lieu' (stats/pertinence) : [[Paris]] -> Paris
 * {{fait}}correction des confusions 'pages totales/passage' (prédiction).
 * {{fait}}correction des confusions 'numéro chapitre'/'titre chapitre', etc
 
 Auteur :
-* {{fait}} Prénom1+Nom1=>Auteur1 (si prénom/nom uniques ou prénom avec initiale) [cosmétique]
-* {{attendre}}  distinction prénom/nom si 2 prénoms (ancrage).
-* {{pas fait}}  détection/gestion auteurs multiples
+* {{pas fait}} Prénom1+Nom1=>Auteur1 (si prénom/nom uniques ou prénom avec initiale) [cosmétique]
+* {{attendre}} distinction prénom/nom si 2 prénoms (ancrage).
+* {{fait}}  détection/gestion auteurs multiples [https://fr.wikipedia.org/w/index.php?title=Sains_(Ille-et-Vilaine)&diff=prev&oldid=163949271]
 * {{pas fait}} {{3/4}}  prédiction wikilien page d'auteur
 
 Editeur :
@@ -45,7 +46,7 @@ Editeur :
 ISBN :
 * {{fait}} conversion EAN (sans tiret) et ISBN-10 => ISBN-13 ([https://fr.wikipedia.org/w/index.php?title=Montigny-l%C3%A8s-Cormeilles&diff=prev&oldid=163545321])
 * {{fait}} ISBN-10 archivé dans 'isbn10' (invisible)
-* {{pas fait}} signalement ISBN invalide (checksum, code pays/product) : commentaire HTML, isbn invalide=, liste, catégorie ?
+* {{fait}} signalement ISBN invalide (checksum, code pays/product) : commentaire HTML, isbn invalide= {{pas fait}} liste, catégorie ?
 * {{pas fait}} contrôle des ISBN multiples
 
 Dates :
@@ -60,11 +61,10 @@ Lien Google Books :
 * [[Wikip%C3%A9dia:Le_Bistro/15_octobre_2019#Liens_Google_Livres Bistro]]
 * {{fait}} simplification d'URL : {{fait}}suppression des paramètres non nécessaires (infos de tracking) : conservation id, pg (page), dq (requête/surlignage) qui permettent d'obtenir la même interface.[cosmétique??]
 * {{attendre}} Suppression lien invalide (id manquant)
-* {{fait}} dans {{m|Ouvrage}} : correction 'lire en ligne'/'présentation en ligne' selon accessibilité totale ou partielle du document.
-* {{attendre}} Suppression lien si accès impossible.
-* {{attendre}}{{fait}} conversion en {{m|Google Livres}} [https://fr.wikipedia.org/w/index.php?title=Montigny-l%C3%A8s-Metz&diff=prev&oldid=163546081]
-* {{fait}} ajout 'présentation en ligne' si livre d'accès partiel.
-* {{attendre}} ajout 'lire en ligne' si livre d'accès complet.
+* {{fait}} dans {{m|Ouvrage}} : correction 'lire en ligne'/'présentation en ligne' selon accessibilité totale ou partielle du document. [https://fr.wikipedia.org/w/index.php?title=Sahelanthropus_tchadensis&diff=163859267&oldid=163858241]
+* {{fait}} conversion en {{m|Google Livres}} [https://fr.wikipedia.org/w/index.php?title=Montigny-l%C3%A8s-Metz&diff=prev&oldid=163546081]
+* {{fait}} ajout lien Google si livre d'accès complet.
+* {{attendre}} ajout 'présentation en ligne' si livre d'accès partiel.
 
 Fonctionnement du bot :
 * {{fait}} n'édite pas si modifications seulement cosmétiques (sur la page) ? (%erreur?)
@@ -76,14 +76,16 @@ Fonctionnement du bot :
 
 Sur page globale :
 * {{fait}} déplacement de la mention langue à l'intérieur du modèle [https://fr.wikipedia.org/w/index.php?title=Sailor_Jupiter&diff=prev&oldid=163845237]
+* {{fait}} pas d'intervention si édition humaine y'a moins de 15 minutes
 * {{pas fait}}  analyse des {fr}, {en} pour ajout {fr} si ouvrages étrangers > 50%
 * {{pas fait}}  Message en PD pour ISBN invalide, suggestion de correctifs, etc. Par le passé, succès/efficacité.
 * {{pas fait}}  un seul wikilien par page
 
 === Estimation ===
-Durée tâche (/limitations API) :
+Durée tâche :
 * 9 mois pour {ouvrage} avec ISBN (~200 edits/j, 10/h) 170'000
 * 2 ans pour {ouvrage} sans ISBN / 920'000 inclusions
+* Avec les limitations API gratuites, le bot analyse maximum 1000 citations/jour.
 
 Dans sa version précédente (2012), suite aux édits du bot, y'avait environ 1% de modification humaine des citations. Les 2/3 portant sur la correction d'ISBN ou titres signalés erronés par le bot (genre message en PD).
 
