--- a/docs/fonctionnalite.wiki
+++ b/docs/fonctionnalite.wiki
@@ -3,11 +3,11 @@ Légende : {{fait}} module activé / {{pas fait}} module pas activé / {{attendr
 === Traitement modèle {Ouvrage} ===
 
 Correction syntaxique des paramètres :
-* {{fait}} correction des alias [cosmétique]
-* {{fait}} conversion des paramètres enwiki ({{m|cite book}}) [cosmétique]
+* {{fait}} correction des alias [invisible]
+* {{fait}} conversion des paramètres enwiki ({{m|cite book}}) [invisible]
 * {{fait}} correction de paramètres inconnus (prédiction) : erreur de frappe [https://fr.wikipedia.org/w/index.php?title=Saint_Fran%C3%A7ois_recevant_les_stigmates_(van_Eyck)&diff=prev&oldid=163864610]
-* {{fait}}  signalement paramètre inconnu : commentaire HTML [https://fr.wikipedia.org/w/index.php?title=Algorithme_de_Clenshaw&diff=prev&oldid=164480569] {{fait}} message en page discussion [https://fr.wikipedia.org/w/index.php?title=Discussion:Alfred_Jarry&diff=164501575&oldid=158959440]
-* {{fait}} extraction paramètres obsolètes (plume,extrait,commentaire) vers {{m|plume}}, {{m|citation bloc}}, {{m|commentaire biblio}}, {{m|début citation}}... [cosmétique]
+* {{fait}}  signalement paramètre inconnu : commentaire HTML [https://fr.wikipedia.org/w/index.php?title=Algorithme_de_Flajolet_et_Martin&diff=164533194&oldid=156125120] {{fait}} message en page discussion [https://fr.wikipedia.org/w/index.php?title=Discussion:Alfred_Jarry&diff=164501575&oldid=158959440]
+* {{fait}} extraction paramètres obsolètes (plume,extrait,commentaire) vers {{m|plume}}, {{m|citation bloc}}, {{m|commentaire biblio}}, {{m|début citation}}... [invisible]
 
 Style : conservation partielle du style rédactionnel du modèle : {{pas fait}} ordre des paramètres, {{fait}}
 espacement/retour ligne, {{pas fait}} noms de paramètre. [https://fr.wikipedia.org/w/index.php?title=Alfred_de_Schamphela%C3%ABre&diff=prev&oldid=164495257]
@@ -24,8 +24,8 @@ Améliorations typographiques :
 Titre, sous-titre...
 * {{fait}} Typo : majuscules, règle internationale " : " (bistro 08-2019)
 * {{fait}}retire lien externe titre/sous-titre (Bistro 27 août 2011)
-* {{fait}}retire {{m|lang}} : déplacé vers 'langue' [cosmétique]
-* {{fait}} déplacement en 'sous-titre' [cosmétique?]
+* {{fait}}retire {{m|lang}} : déplacé vers 'langue' [invisible]
+* {{fait}} déplacement en 'sous-titre' [invisible?]
 
 Autres :
 * {{fait}} pas de wikilien sur 'lieu' (stats/pertinence) : [[Paris]] -> Paris
@@ -33,19 +33,20 @@ Autres :
 * {{fait}}correction des confusions 'numéro chapitre'/'titre chapitre', etc
 
 Auteur :
-* {{attendre}} Prénom1+Nom1=>Auteur1 (si prénom/nom uniques ou prénom avec initiale) [cosmétique]
+* {{attendre}} Prénom1+Nom1=>Auteur1 (si prénom/nom uniques ou prénom avec initiale) [invisible]
 * {{attendre}} distinction prénom/nom si 2 prénoms (ancrage).
 * {{fait}}  distinction auteurs multiples [https://fr.wikipedia.org/w/index.php?title=Sains_(Ille-et-Vilaine)&diff=prev&oldid=163949271]
 * {{pas fait}} prédiction wikilien page d'auteur
 
 Editeur :
-* {{fait}} 'lien éditeur' retiré (obsolète), remplacé par wikilien [cosmétique]
-* {{fait}} correction typographique : abbréviations (Éd.)
+* {{fait}} 'lien éditeur' retiré (obsolète), remplacé par wikilien [invisible]
+* {{fait}} correction typographique : abbréviations du genre "(Éd.)"
 * {{fait}} forme brève : Éd. de La Gourde => [[Éditions de La Gourde|La Gourde]], mais 'Éditions de Minuit' inchangé
 * {{pas fait}} {{3/4}} prédiction du wikilien éditeur
 
 Lieu :
-* {{fait}} francisation des villes (London->Londres)
+* {{fait}} francisation des villes : London->Londres [https://raw.githubusercontent.com/Dispositif/Wikibot/master/src/Domain/resources/traduction_ville.csv voir liste]
+* {{fait}} suppression wikilien : [[Londres]]->Londres
 
 ISBN :
 * {{fait}} conversion EAN (sans tiret) et ISBN-10 => ISBN-13 ([https://fr.wikipedia.org/w/index.php?title=Montigny-l%C3%A8s-Cormeilles&diff=prev&oldid=163545321])
@@ -54,7 +55,7 @@ ISBN :
 * {{pas fait}} contrôle des ISBN multiples (isbn2, isbn3)
 
 Dates :
-* {{fait}} confusion date/année [cosmétique]
+* {{fait}} confusion date/année [invisible]
 * {{pas fait}}  typo et conversions dates américaines
 * {{attendre}} Avec LUA plus besoin d'exploser la date en jour/mois/année. Faut-il convertir vers 'date' ?
 
@@ -76,9 +77,9 @@ Lien vers Internet Archive :
 
 Fonctionnement du bot :
 * {{fait}} n'édite pas si correction invisible
-* {{fait}} si ajout de donnée substanciel (auteur,sous-titre...) ou prédiction : édit sans bot flag
+* {{fait}} édit sans botflag si ajout de donnée substantiel (auteur,sous-titre...) ou prédiction incertaine
 * {{fait}} arrêt si modification page discussion du bot
-* {{fait}} ne traite pas les modèles contenant du commentaire HTML <nowiki><!-- blabla -->
+* {{fait}} ne traite pas les modèles contenant du commentaire HTML <nowiki><!-- blabla --></nowiki>
 * respecte les limitations {{m|nobots}} et {{m|bots}}
 * {{pas fait}} suivi des reverts (apprentissage)
 * {{pas fait}} page de log détaillé quotidien
@@ -95,8 +96,10 @@ Durée tâche :
 * 9 mois pour {ouvrage} avec ISBN (~200 edits/j, 10/h) 170'000
 * 2 ans pour {ouvrage} sans ISBN / 920'000 inclusions
 * Avec les limitations API gratuites, le bot analyse maximum 1000 citations/jour.
+* Le bot ne devrait pas repasser sur un article avant 1 an
 
-Dans sa version précédente (2012), suite aux édits du bot, y'avait environ 1% de modification humaine des citations. Les 2/3 portant sur la correction d'ISBN ou titres signalés erronés par le bot (genre message en PD).
+Dans sa version ancienne, suite aux édits du bot, y'avait environ 1% de modification humaine des citations. Les 2/3
+portant sur la correction d'ISBN ou titres signalés erronés par le bot (genre message en PD).
 
 === Mentions libres de biblio (hors modèles) ===
 
