--- a/src/Application/templates/message_errors.wiki
+++ b/src/Application/templates/message_errors.wiki
@@ -6,7 +6,7 @@ Bonjour Humains !
 Lors de la vérification des mentions bibliographiques de cet article, j'ai détecté des erreurs de paramètre du modèle {{m|ouvrage}} que je ne parviens pas corriger moi-même.
 J'ai signalé ces erreurs avec des [[Commentaire (informatique)|commentaires HTML]] (invisibles) que je copie ci-dessous :
 
-###ERROR LIST##
+##ERROR LIST##
 
 Une fois la correction réalisée, merci de supprimer ce message. <br>
 Le robot ~~~~
