style message_errors

--- a/src/Application/templates/message_errors.wiki
+++ b/src/Application/templates/message_errors.wiki
@@ -9,4 +9,5 @@ pas à corriger moi-même. J'ai signalé ces erreurs avec des commentaires (invi
 
 ##ERROR LIST##
 
+Je supprimerai ce message après les corrections.<br />
 Le robot ~~~~
